implement GET /subscriptions/{subscription_id}
